--- a/3_derivate_25.html
+++ b/3_derivate_25.html
@@ -239,23 +239,45 @@ denominador <a href="https://es.khanacademy.org/math/ap-calculus-ab/ab-different
 <li><p>Aplica la regla de la división <a href="https://es.khanacademy.org/math/ap-calculus-ab/ab-differentiation-1-new/ab-2-9/e/differentiate-quotients">aquí</a>.</p></li>
 <li><p>Aplica todo lo aprendido <a href="https://es.khanacademy.org/math/ap-calculus-ab/ab-differentiation-1-new/ab-2-9/e/differentiate-rational-functions">aquí</a>.</p></li>
 </ol>
-<div hidden>
-<h2 id="regla-de-la-cadena"><strong>4. Regla de la cadena</strong></h2>
+<p><br><br></p>
+<h2 id="regla-de-la-cadena">5. Regla de la cadena</h2>
+<p><br><span class="grey3 size70">🔁 Repaso:</span></p>
 <p>Se usa cuando hay funciones compuestas:</p>
 <p><span class="math display">
 \frac{d}{dx}[f(g(x))] = f&#39;(g(x)) \cdot g&#39;(x)
 </span></p>
-<h3 id="ejemplo"><strong>Ejemplo:</strong></h3>
+<p><strong>Ejemplo:</strong></p>
 <p><span class="math display">
 y = \sin(x^2) \Rightarrow y&#39; = \cos(x^2) \cdot 2x
 </span></p>
+<p>Puedes repasarlo <a href="https://es.khanacademy.org/math/ap-calculus-ab/ab-differentiation-2-new/ab-3-1a/v/chain-rule-introduction">aquí</a>.
+También este <a href="https://es.khanacademy.org/math/ap-calculus-ab/ab-differentiation-2-new/ab-3-1a/v/common-chain-rule-misunderstandings">video</a>
+te va a orientar sobre algunos errores comunes.</p>
+<p><br><span class="grey3 size70">📝 Práctica:</span></p>
+<ol type="1">
+<li><p>Resuelve estos 4 <a href="https://es.khanacademy.org/math/ap-calculus-ab/ab-differentiation-2-new/ab-3-1a/e/differentiate-composite-functions-intro">ejercicios</a></p></li>
+<li><p>Resuelve:</p>
+<ul>
+<li><strong>a)</strong> <span class="math inline">f(x) = (3x +
+2)^4</span></li>
+<li><strong>b)</strong> <span class="math inline">f(x) =
+\sin(5x^2)</span></li>
+<li><strong>c)</strong> <span class="math inline">f(x) = e^{\ln(x^2 +
+1)}</span></li>
+<li><strong>d)</strong> <span class="math inline">f(x) =
+\sqrt{\tan(2x)}</span></li>
+<li><strong>e)</strong> <span class="math inline">f(x) =
+\ln\left[\left(2x^2 + 3\right)^5 \cdot \sqrt{\sin x}\right]</span></li>
+</ul></li>
+</ol>
+<div hidden>
 <h2 id="regla-de-lhôpital"><strong>5. Regla de L’Hôpital</strong></h2>
 <p>Se usa en límites indeterminados como <span class="math inline">\frac{0}{0}</span> o <span class="math inline">\frac{\infty}{\infty}</span>.</p>
 <p><span class="math display">
 \lim_{x \to a} \frac{f(x)}{g(x)} = \lim_{x \to a}
 \frac{f&#39;(x)}{g&#39;(x)} \quad \text{(si el límite existe)}
 </span></p>
-<h3 id="ejemplo-1"><strong>Ejemplo:</strong></h3>
+<h3 id="ejemplo"><strong>Ejemplo:</strong></h3>
 <p><span class="math display">
 \lim_{x \to 0} \frac{\sin x}{x} = \frac{\cos x}{1} = 1
 </span></p>
@@ -271,7 +293,7 @@ relativos</strong>.</p>
 <li>Analizar los signos de la derivada antes y después de cada
 raíz.</li>
 </ol>
-<h3 id="ejemplo-2"><strong>Ejemplo:</strong></h3>
+<h3 id="ejemplo-1"><strong>Ejemplo:</strong></h3>
 <p><span class="math inline">f(x) = -x^2 + 4x</span></p>
 <ul>
 <li><span class="math inline">f&#39;(x) = -2x + 4</span></li>
