--- a/3_derivate_25.html
+++ b/3_derivate_25.html
@@ -270,18 +270,38 @@ te va a orientar sobre algunos errores comunes.</p>
 \ln\left[\left(2x^2 + 3\right)^5 \cdot \sqrt{\sin x}\right]</span></li>
 </ul></li>
 </ol>
-<div hidden>
-<h2 id="regla-de-lhôpital"><strong>5. Regla de L’Hôpital</strong></h2>
+<p><br><br></p>
+<h2 id="regla-de-lhôpital">Regla de L’Hôpital</h2>
+<p><br><span class="grey3 size70">🔁 Repaso:</span></p>
 <p>Se usa en límites indeterminados como <span class="math inline">\frac{0}{0}</span> o <span class="math inline">\frac{\infty}{\infty}</span>.</p>
 <p><span class="math display">
 \lim_{x \to a} \frac{f(x)}{g(x)} = \lim_{x \to a}
 \frac{f&#39;(x)}{g&#39;(x)} \quad \text{(si el límite existe)}
 </span></p>
-<h3 id="ejemplo"><strong>Ejemplo:</strong></h3>
+<p><strong>Ejemplo:</strong></p>
 <p><span class="math display">
 \lim_{x \to 0} \frac{\sin x}{x} = \frac{\cos x}{1} = 1
 </span></p>
-<hr />
+<p>También puedes repasarlo <a href="https://www.youtube.com/watch?v=vJ5V9U2mMP8&amp;t=483s">aquí</a>.</p>
+<p><br><span class="grey3 size70">📝 Práctica:</span></p>
+<p>Resuelve:</p>
+<ol type="1">
+<li><span class="math inline">\lim_{x \to \infty}
+\frac{x}{e^x}</span></li>
+<li><span class="math inline">\lim_{x \to 0}
+\frac{\tan(3x)}{x}</span></li>
+<li><span class="math inline">\lim_{x \to 0} \frac{e^{2x} - 1}{\sin
+x}</span></li>
+<li><span class="math inline">\lim_{x \to 0}
+\frac{\ln(\cos(2x))}{x^2}</span></li>
+<li><span class="math inline">\lim_{x \to 0} \frac{e^{\tan x} - 1 - \tan
+x}{x^2}</span></li>
+<li><span class="math inline">\lim_{x \to 0} \frac{\ln(1 +
+\sin^2(2x))}{x^2}</span></li>
+<li><span class="math inline">\lim_{x \to 0} \frac{e^{\sin^2(2x)} -
+1}{x^2}</span></li>
+</ol>
+<div hidden>
 <h2 id="aplicaciones-máximos-y-mínimos"><strong>6. Aplicaciones: Máximos
 y mínimos</strong></h2>
 <p>Se usa la derivada para encontrar <strong>extremos
@@ -293,7 +313,7 @@ relativos</strong>.</p>
 <li>Analizar los signos de la derivada antes y después de cada
 raíz.</li>
 </ol>
-<h3 id="ejemplo-1"><strong>Ejemplo:</strong></h3>
+<h3 id="ejemplo"><strong>Ejemplo:</strong></h3>
 <p><span class="math inline">f(x) = -x^2 + 4x</span></p>
 <ul>
 <li><span class="math inline">f&#39;(x) = -2x + 4</span></li>
@@ -302,7 +322,6 @@ raíz.</li>
 <li>Máximo relativo en <span class="math inline">x=2</span>, ya que
 cambia de positivo a negativo.</li>
 </ul>
-<hr />
 <h2 id="ejercicios"><strong>7. Ejercicios</strong></h2>
 <h3 id="derivadas-por-definición"><strong>7.1. Derivadas por
 definición</strong></h3>
