--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@ vertical-align: middle;
 <li><p><a href="1_limits_24.html">1. Límites (parte 1)</a></p></li>
 <li><p><a href="2_limits_24.html">2. Límites (parte 2)</a></p></li>
 <li><p><a href="3_derivate_25.html">3. Derivadas</a></p></li>
+<li><p><a href="4_integral_25.html">4. Cálculo integral</a></p></li>
 </ul>
 <p><span hidden>Fin archivo</span></p>
 <p><br></p>
