--- a/4_integral_25.html
+++ b/4_integral_25.html
@@ -320,6 +320,15 @@ Khan Academy</span>
 <p><br></p>
 <p><br><span class="grey3 size70">📝 Práctica:</span></p>
 <p>Haz <strong>“todos”</strong> los ejercicios de <a href="https://es.khanacademy.org/math/ap-calculus-ab/ab-integration-new/ab-6-8a/e/reverse-power-rule-rewriting">aquí</a>.</p>
+<p><br></p>
+<h3 id="d-integrales-con-ex-1x-cosx-y-senx">7d) Integrales con <span class="math inline">e^x</span>, <span class="math inline">1/x</span>,
+<span class="math inline">cos(x)</span> y <span class="math inline">sen(x)</span></h3>
+<p><br><span class="grey3 size70">🔁 Repaso:</span></p>
+<p>Puedes repasarlo <a href="https://www.youtube.com/watch?v=4JwvRi7mQsk&amp;t=456s">aquí</a> y
+<a href="https://www.youtube.com/watch?v=nTpYwW5LLq0">aquí</a></p>
+<p><br><span class="grey3 size70">📝 Práctica:</span></p>
+<p><strong>1.</strong> Haz estos <a href="https://es.khanacademy.org/math/ap-calculus-ab/ab-integration-new/ab-6-8b/e/indefinite-integrals-of-e-x-1-x">ejercicios</a></p>
+<p><strong>2.</strong> Haz estos <a href="https://es.khanacademy.org/math/ap-calculus-ab/ab-integration-new/ab-6-8b/e/integrating-sin-cos">ejercicios</a></p>
 <div hidden>
 <hr />
 <hr />
